[package]
name = "server1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
warp = "0.3.3"

# Error handling
handle-errors = {path = "handle-errors"}

# Backtracing
uuid = { version = "1.2.2", features = ["v4"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

# Database
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "migrate", "postgres"] }
